# AnimateSFML

./: CMakeLists.txt  README.md
src/: Game.cpp  Game.h  main.cpp
